fix profile groups spacing

--- a/src/scss/components/_dialogs.scss
+++ b/src/scss/components/_dialogs.scss
@@ -68,7 +68,7 @@
             & .dialog__profile-info__group {
 
                 & + * {
-                    margin-top: 1rem;
+                    margin-top: 1.5rem;
                 }
             }
         }
